# dvc-example

./: .gitignore  dvc.yaml  pyproject.toml
.dvc/: config
data/models/example/: .gitignore
src/: dvc.py  filesystem.py
src/pipelines/example/: data.py  dvc.yaml  eval.py  params.py  params.yaml  preprocess.py  train.py
