[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_calls = false
allow_redefinition = true
ignore_missing_imports = true

[tool.pyright]
reportRedeclaration = false

[tool.poetry]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
jupyter = "^1.0.0"
pillow = "^10.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
scikit-learn = "^1.4.2"
mypy = "^1.9.0"
ruff = "^0.3.7"
tqdm = "^4.66.2"
types-tqdm = "^4.66.0.20240106"
dvc = "^3.51.2"
pre-commit = "^3.7.1"
dvclive = "^3.46.0"
pandas-stubs = "^2.2.2.240603"
data-science-types = "^0.2.23"
types-pyyaml = "^6.0.12.20240311"
pyyaml = "^6.0.1"
dvc-webdav = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
