[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_calls = false
allow_redefinition = true
ignore_missing_imports = true

[tool.pyright]
reportRedeclaration = false

[tool.poetry]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.2"
numpy = "~1.26"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ipykernel = "^6.29.4"
ruff = "^0.4.8"
dvc = "^3.51.2"
dvclive = "^3.46.1"
pandas-stubs = "^2.2.2.240603"
data-science-types = "^0.2.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
